--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -293,8 +293,8 @@
                     }
                 });
             }
-            model.addMessage = function(data) {
-                model.messages.unshift(data.message);
+            model.addMessage = function(message) {
+                model.messages.unshift(message);
             };
             model.hasParticipants = ko.computed(function() {
                 return model.participantCount() > 0;
@@ -317,7 +317,6 @@
         }
         function initialize(experimentModelJson) {
             var experimentModel = new ExperimentModel(experimentModelJson);
-            // var experimentModel = new ExperimentModel();
             ko.applyBindings(experimentModel);
             // establish sockjs websocket connection
             var s = connect("/experimenter");
@@ -325,9 +324,10 @@
                 console.log("Received event: " + evt);
                 experiment_event = $.parseJSON(evt.data);
                 switch (experiment_event.event_type) {
-                    case 'chat':
-                        experimentModel.addMessage("Participant " + experiment_event.participant_number + ": " + experiment_event.message);
+                    case 'update':
+                        console.debug("FIXME: ignoring update requests, patch sockjs broadcast to not send certain messages");
                         break;
+                    case 'chat':
                     case 'info':
                     default:
                         experimentModel.addMessage(experiment_event.message);
