chat form sketch

--- a/vcweb/broker/templates/broker/participate.html
+++ b/vcweb/broker/templates/broker/participate.html
@@ -274,6 +274,25 @@
 
 
     <script type='text/html' id='REGULAR'>
+    <form>
+    <div class="span1" >
+        <a href="#" class="btn btn-primary" data-bind="submitChatOptionLocal">
+            <i class="icon-home icon-white"></i>
+        <span><strong>Talk within group FREE</strong>
+        <input id="chat_within_group" hidden="True">
+        </span>
+        </a>
+    </div>
+    <div class="span1">
+        <a href="#" class="btn btn-primary" data-bind="submitChatOptionGlobal">
+            <i class="icon-globe icon-white"></i>
+            <span><strong>Talk with other group $$ 2h</strong></span>
+            <input id="chat_between_group" hidden="True">
+        </a>
+    </div>
+    </form>
+
+
         <div class='row'>
             <div class='span4'>
                 <h3>My Current Earnings</h3>
