--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -133,14 +133,16 @@
         </div>
         {% endblock footer %}
         {% with jquery_version="1.9.1" %}
-        <script type='text/javascript' src='//ajax.googleapis.com/ajax/libs/jquery/{{jquery_version}}/jquery.min.js'></script>
+        <script src='//ajax.googleapis.com/ajax/libs/jquery/{{jquery_version}}/jquery.min.js'></script>
         {% endwith %}
-        <script type='text/javascript' src='{{STATIC_URL}}bootstrap/js/bootstrap.min.js'></script>
-        <script type='text/javascript' src='{{STATIC_URL}}js/jquery.cookie.js'></script>
-        <script type='text/javascript' src='{{STATIC_URL}}js/ko/knockout.min.js'></script>
-        <script type='text/javascript' src='{{STATIC_URL}}js/ko/knockout.mapping.min.js'></script>
-        <script type='text/javascript' src='{{STATIC_URL}}js/common.js'></script>
-        <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/d3/3.0.1/d3.v3.min.js'></script>
+        <script src='{{STATIC_URL}}bootstrap/js/bootstrap.min.js'></script>
+        <script src='{{STATIC_URL}}js/jquery.cookie.js'></script>
+        <script src='{{STATIC_URL}}js/ko/knockout.min.js'></script>
+        <script src='{{STATIC_URL}}js/ko/knockout.mapping.min.js'></script>
+        <script src='{{STATIC_URL}}js/common.js'></script>
+        {% comment %}
+        <script src='//cdnjs.cloudflare.com/ajax/libs/d3/3.0.1/d3.v3.min.js'></script>
+        {% endcomment %}
         {% dajaxice_js_import %}
         {% block javascript %}
         {% endblock %}
